--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
@@ -72,8 +72,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Register</a></li>
-          <li><a class="getstarted scrollto" href="#about">Login</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Log In</a></li>
+          <li><a class="getstarted scrollto" href="#about">Register</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -159,7 +159,7 @@
     
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
 
       <div class="container" data-aos="fade-up">
 
@@ -231,7 +231,8 @@
 
       </div>
 
-    </section><!-- End Services Section -->
+    </section> -->
+    <!-- End Services Section -->
 
 
     <!-- ======= Testimonials Section ======= -->
@@ -551,7 +552,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/logo2.png" alt="">
+              <!-- <img src="assets/img/logo2.png" alt=""> -->
               <span>Image-Converter</span>
             </a>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
