--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
@@ -34,10 +34,17 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  
 </head>
 
 <body>
-
+    <style>
+        body{
+            background-image:url("assets/img/wallpaper.jpg");
+            /* background-repeat:no-repeat;
+            background-size: cover; */
+        }
+      </style>
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -74,6 +81,7 @@
           </li> -->
           <li><a class="nav-link scrollto" href="#contact">Log In</a></li>
           <li><a class="getstarted scrollto" href="#about">Register</a></li>
+          <!-- <li><button onclick="onSubmitCode()">Click me</button></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -339,6 +347,7 @@
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
+        
 
       <div class="container" data-aos="fade-up">
 
@@ -555,7 +564,7 @@
               <!-- <img src="assets/img/logo2.png" alt=""> -->
               <span>Image-Converter</span>
             </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <p>In partnership with MathU Teaching Emporium and the COS 301 team</p>
             <div class="social-links mt-3">
               
               <a href="https://github.com/COS301-SE-2022/Image-Converter" class="linkedin"><i class="bi bi-github"></i></a>
