--- a/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
+++ b/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
@@ -37,6 +37,13 @@
 </head>
 
 <body>
+    <!-- <style>
+        body{
+            background-image:url("assets/img/wallpaper.jpg");
+            background-repeat:no-repeat;
+            background-size: cover;
+        }
+      </style> -->
 
   <!-- ======= Header ======= -->
   <!-- <header id="header" class="header fixed-top">
@@ -160,7 +167,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Upload Image</h3>
               <p>This allows you to upload an image which you desire to clean and enhance</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -169,7 +176,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Draw Graph Using Formulae</h3>
               <p>This feature allows you to enter the formula of any mathematical function in ordet to dray the graph of that function. Polinomial functions, trigonometric functions, statistical functions and many more types of functions are supported</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -179,7 +186,7 @@
               <h3>Upload History</h3>
               <p>This section consists of the six recent images that the user has uploaded. Each image can be
                 clicked on to redisplay the graph associated that image.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -188,7 +195,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Unrecognized Images</h3>
               <p>This section contains all the images that were unrecognizable by your classification model. This will allow the content manager to either delete the image or manually classify the image and  feed it to the model for retraining in order to increase its accuracy</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -197,7 +204,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Activity tracker</h3>
               <p>This feature allows you to track the various activities performed in the system.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -206,7 +213,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Retraining</h3>
               <p>The retraining capability enables you to submit the categorised data to be used to retrain the classification model in order to increase its accuracy and robustness </p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -541,7 +548,7 @@
               <!-- <img src="assets/img/logo2.png" alt=""> -->
               <span>Image-Converter</span>
             </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <p>In partnership with MathU Teaching Emporium and the COS 301 team</p>
             <div class="social-links mt-3">
               
               <a href="https://github.com/COS301-SE-2022/Image-Converter" class="linkedin"><i class="bi bi-github"></i></a>
