--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
@@ -450,7 +450,7 @@
   .hero {
     width: 100%;
     height: 100vh;
-    // background: url(../img/hero-bg.png) top center no-repeat;
+    // background: url(assets/img/hero-bg.png) top center no-repeat;
     background-size: cover;
   }
   
@@ -1409,7 +1409,7 @@
     justify-content: center;
     flex-direction: row;
   }
-  
+
   .team {
     background: #fff;
     padding: 60px 0;
