register and login router buttons

--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
@@ -79,9 +79,9 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Log In</a></li>
-          <li><a class="getstarted scrollto" href="#about">Register</a></li>
-          <!-- <li><button onclick="onSubmitCode()">Click me</button></li> -->
+          <li><a class="nav-link scrollto" (click)="onSubmitLogin()">Log In</a></li>
+          <li><a class="getstarted scrollto" (click)="onSubmitCode()">Register</a></li>
+          <!-- <li><button btn-get-started  ="reg" (click)="onSubmitCode()">Click me</button></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -99,7 +99,7 @@
           <h2 data-aos="fade-up" data-aos-delay="400">Hosting a variety of functions such as image manipulation, image cleaning, classification and filtering for your Content Management System</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+              <a (click)="onSubmitCode()" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Get Started</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
