--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -26,23 +26,23 @@
         <mat-icon>home</mat-icon>
         <span>Home</span>
       </button>
-      <button  mat-button class="menu-button" routerLink="/upload">
+      <button  mat-button class="menu-button" routerLink="./upload">
         <mat-icon>add_photo_alternate</mat-icon>
         <span>Upload Image</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/livegraph">
+      <button mat-button class="menu-button" routerLink="./livegraph">
         <mat-icon>brush</mat-icon>
         <span>Draw Graph using formulae</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/uploadHistory">
+      <button mat-button class="menu-button" routerLink="./uploadHistory">
         <mat-icon>history</mat-icon>
         <span>Upload History</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/unrecognzied">
+      <button mat-button class="menu-button" routerLink="./unrecognzied">
         <mat-icon>report_problem</mat-icon>
         <span>Unrecognized Images</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/activitytracker">
+      <button mat-button class="menu-button" routerLink="./activitytracker">
         <mat-icon>track_changes</mat-icon>
         <span>Activity Tracker</span>
       </button>
@@ -64,7 +64,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content mat-elevation-z8">
-        <router-outlet ></router-outlet>
+        <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
