--- a/Front-End/Image-Converter/src/app/register/register.component.scss
+++ b/Front-End/Image-Converter/src/app/register/register.component.scss
@@ -6,9 +6,9 @@
       margin: 0;
       box-sizing: border-box;
   }
-  body{
-      background-color: #080710;
-  }
+  // body{
+  //     background-color: #080710;
+  // }
   .background{
       width: 430px;
       height: 520px;
@@ -26,30 +26,30 @@
       position: absolute;
       border-radius: 50%;
   }
-  .shape:first-child{
-      background: linear-gradient(
-        #ff2fee,
-        #4819f0
-      );
-      left: -80px;
-      top: -80px;
-  }
-  .shape:last-child{
+  // .shape:first-child{
+  //     background: linear-gradient(
+  //       #ff2fee,
+  //       #4819f0
+  //     );
+  //     left: -80px;
+  //     top: -80px;
+  // }
+  // .shape:last-child{
     
-    background: linear-gradient(
-          to right,
-          #0e049e,
-          #56f019
-      );
-      right: -30px;
-      bottom: -80px;
-  }
+  //   background: linear-gradient(
+  //         to right,
+  //         #0e049e,
+  //         #56f019
+  //     );
+  //     right: -30px;
+  //     bottom: -80px;
+  // }
   form{
     //   height: 540px;
     height: auto;
       // width: 400px;
       width:auto;
-      background-color: rgba(255,255,255,0.13);
+      background-color: rgba(255,255,255,0.5);
       position: absolute;
       transform: translate(-50%,-50%);
       top: 50%;
