--- a/Front-End/Image-Converter/src/app/login/login.component.scss
+++ b/Front-End/Image-Converter/src/app/login/login.component.scss
@@ -66,24 +66,24 @@
       position: absolute;
       border-radius: 50%;
   }
-  .shape:first-child{
-      background: linear-gradient(
-        #ff2fee,
-        #4819f0
-      );
-      left: -80px;
-      top: -80px;
-  }
-  .shape:last-child{
+//   .shape:first-child{
+//       background: linear-gradient(
+//         #ff2fee,
+//         #4819f0
+//       );
+//       left: -80px;
+//       top: -80px;
+//   }
+//   .shape:last-child{
     
-    background: linear-gradient(
-          to right,
-          #0e049e,
-          #56f019
-      );
-      right: -30px;
-      bottom: -80px;
-  }
+//     background: linear-gradient(
+//           to right,
+//           #0e049e,
+//           #56f019
+//       );
+//       right: -30px;
+//       bottom: -80px;
+//   }
   form{
       height: 540px;
       width: 400px;
