--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -23,6 +23,7 @@
       <style>
         body{
             background-image:url("assets/img/register-wallpaper6.jpg");
+            /* background-image:url("assets/img/wallpaper.jpg"); */
             /* background-repeat:no-repeat;
             background-size: cover; */
         }
@@ -36,7 +37,7 @@
                 <form id="reg" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                     <table>
                         
-                            <h3 id="logo">Register</h3>
+                            <h1 id="logo">Create account</h1>
                         <tr>   
                             <td> 
                                 <label for="FName">First Name</label>
