:bug: minor routing fix

--- a/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
+++ b/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
@@ -167,7 +167,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Upload Image</h3>
               <p>This allows you to upload an image which you desire to clean and enhance</p>
-              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
+              <a (click)="onSubmitUpload()" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -176,7 +176,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Draw Graph Using Formulae</h3>
               <p>This feature allows you to enter the formula of any mathematical function in ordet to dray the graph of that function. Polinomial functions, trigonometric functions, statistical functions and many more types of functions are supported</p>
-              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
+              <a (click)="onSubmitGraphing()"class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -186,7 +186,7 @@
               <h3>Upload History</h3>
               <p>This section consists of the six recent images that the user has uploaded. Each image can be
                 clicked on to redisplay the graph associated that image.</p>
-              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
+              <a (click)="onSubmitHistory()"class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -195,7 +195,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Unrecognized Images</h3>
               <p>This section contains all the images that were unrecognizable by your classification model. This will allow the content manager to either delete the image or manually classify the image and  feed it to the model for retraining in order to increase its accuracy</p>
-              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
+              <a (click)="onSubmitUnrecognized()" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -204,7 +204,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Activity tracker</h3>
               <p>This feature allows you to track the various activities performed in the system.</p>
-              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
+              <a (click)="onSubmitTracker()" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
