--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -38,7 +38,7 @@
         <mat-icon>history</mat-icon>
         <span>Upload History</span>
       </button>
-      <button mat-button class="menu-button" routerLink="./unrecognzied">
+      <button mat-button class="menu-button" routerLink="./unrecognized">
         <mat-icon>report_problem</mat-icon>
         <span>Unrecognized Images</span>
       </button>
