forgot-password formatting

--- a/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
+++ b/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
@@ -14,6 +14,45 @@
 
 </head>
 <body>
+
+    <style>
+        body{
+            /* background-image:url("assets/img/register-wallpaper6.jpg"); */
+            background-image:url("assets/img/wallpaper.jpg");
+            /* background-image:url("assets/img/wallpaper.jpg"); */
+            /* background-repeat:no-repeat;
+            background-size: cover; */
+            /* background-position: 150%; */
+            /* background-repeat: no-repeat; */
+            /* background-size: contain;
+            background-color: #fff; */
+            
+        }
+      </style>
+
+
+<header id="header" class="header fixed-top">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center">
+        <img src="assets/img/logo2.png" alt="">
+        <span>Image-Converter</span>
+      </a>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+        
+          <p id="accountLink">Don't have an account?</p>
+          <li><a class="getstarted scrollto" (click)="onSubmitCode()">Register</a></li>
+           <!-- <a routerLink="/register"  (click)="register()">register</a>  -->
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav>
+      
+
+    </div>
+  </header>
+
     <div id="loginForm">
         <div id="formContent">
             <div class="background">
